Harden Android 10-16 startup, WebView fallback and API compatibility